# nexus-mod-sharing

./: LICENSE  README.md
.github/workflows/: nexus-connect.yml
api-nexus-connect/: .gitignore  Dockerfile  README.md  compose.yaml  requirements.txt
api-nexus-connect/app/: main.py  settings.py
api-nexus-connect/app/controllers/: accounts.py  mod_controller.py  profile_controller.py  user_controller.py
api-nexus-connect/app/lib/: association_base.py  auth.py  email.py  jwt.py  listeners.py  providers.py  types.py
api-nexus-connect/app/models/: account.py  manual_mod.py  mod.py  mod_profile.py  role.py  user.py
api-nexus-connect/app/services/: user_service.py
connect/: .gitignore
connect/account/: urls.py  views.py
connect/account/migrations/: 0001_initial.py
connect/api/: serializers.py  urls.py
connect/connect/: settings.py  urls.py
connect/mods/: models.py  urls.py  views.py
connect/mods/migrations/: 0001_initial.py
nexus-connect/: README.md  package-lock.json  package.json  tsconfig.json  unocss.config.ts  vite.config.ts
nexus-connect/src/: App.css  app.tsx  layout.tsx  main.tsx
nexus-connect/src-tauri/: Cargo.toml  tauri.conf.json
nexus-connect/src-tauri/capabilities/: migrated.json
nexus-connect/src-tauri/src/: commands.rs  events.rs  main.rs  mo.rs  mod_organizer.rs  models.rs
nexus-connect/src-tauri/src/commands/: mod_organizer.rs  vortex.rs
nexus-connect/src-tauri/src/events/: mo_processing.rs
nexus-connect/src-tauri/src/models/: mo_mod.rs  nc_mod.rs  nexus_mod.rs  payloads.rs
nexus-connect/src/components/: ModCard.tsx  (+2 more)
(+55 files in other folders)
